# gorillas

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  gorillas.cpp  gorillas.hpp  main.cpp  sprites.cpp  sprites.hpp
